	- added: 'reopen-count' parameter to threshold gate (-ge);
		 for instance when recording vinyl/tapes, this allows
		 to automatically restart recording when a new track 
		 is started [andrewl]
	- added: ecasound frontend option '-E "cmds"' that allows
	 	 to run a set of interactive mode commands at
		 startup; see ecasound(1) for details; closes (edi-38)
        - changed: most of the EWF support (Ecasound Wave Files, .ewf) 
		   has been rewritten in this version; numerous bugs
	  	   are fixed
        - changed: eaim - commands 'cop-add' and 'ctrl-add' now allow
		   an alternate syntax: both "-<id_string>:par1,...,parN"
		   and "<id_string>:par1,...,parN" are now accepted
        - changed: ability to write to EWF file is now marked as 
	           a deprecated feature which will be removed in
	           a later release 
	- changed: mechanism to terminate forked child processes; 
		   properly wait for process termination in all 
		   circumstances (previously there were some 
		   unhandled corner cases)
	- changed: major updates to the examples.html page (available
	           also at http://eca.cx/examples )
	- changed: refactored logic for propagating seek events 
		   across chainsetups; warnings are now issued if 
		   one tries to seek objects that do not supports
		   seeking; similarly warning is issued if a given
	 	   audio object type doesn't support sample accurate
		   seeks (for example mp3 inputs have this limitation)
        - changed: updated ecasound(1) man page description of '-klg'
	- changed: separate global (-d, -R, ...) and ecasound frontend 
		   specific (-c, --daemon, -s, ...) options in 
		   ecasound(1) man page
        - changed: changes to "cs-status" (aka "status", "st")
		   output formatting; now more information about
	           selected and connected setups is printed out
        - fixed: incorrect usage of the Python C API, which leads to
	 	 segfaults when pyecasound is used under python2.5;